--- a/message/index.html
+++ b/message/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>HBD Anu ❤ </title> <!-- this text can be edited -->
+  <title>Happy Birthday Anu ❤ :) </title> <!-- TITLE OF THIS PAGE CAN BE CHANGED HERE -->
 
 
 
@@ -12,19 +12,11 @@
 </head>
 
 <body>
-  <div class="background"></div>
-<h1>
-  <div class="underlay"></div>
-  <span class="initial">
-    <span>Your</span>
-    <span>smile is wonder</span>
-  </span>
-  <span class="final">
-    <span>We will</span>
-    <span>never let it fade</span>
-  </span>
-</h1>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
+  <font size="30" color="red"> Anu! 💖</font> <!-- CHANGE NAME-->
+  <font size="2">­<p> _ </p></font>
+  <font size="6"><div id="container"></div></font>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js'></script>
 
     <script src="js/index.js"></script>
     <style>
@@ -69,10 +61,10 @@
     }
     </style>
     <div align="right">
-    <h2>Click Below Love </h2>
+    <h2><font color="white">Click Below</font></h2>
 
-    <button class="button" style="vertical-align:middle"><span><a href="/Wish-Her/challange">Next</a></span></button> <!-- change domain here -->
+    <button class="button" style="vertical-align:middle"><span><a href="../hbd">Next</a></span></button> <!-- CHANGE DOMAIN NAME HERE -->
     </div>
-	<body oncontextmenu="return false"></body>
+
 </body>
 </html>
