--- a/Wish-Her/game/index.html
+++ b/Wish-Her/game/index.html
@@ -203,7 +203,7 @@ p {
   <div class="message">
     <h1 class="title"></h1>
     <p class="text"></p>
-    <button><a href="../gallary">NEXT > FINAL PAGE</a></button>
+    <button><a href="/Wish-Her/gallary/">NEXT > FINAL PAGE</a></button>
 
   </div>
 </div>
