--- a/Wish-Her/hbd/index.html
+++ b/Wish-Her/hbd/index.html
@@ -43,7 +43,7 @@ body {
 
 <body>
   <canvas id=c></canvas>
-<p>Made With ❤ <a href="../game">Hey</a> <span><a href="../game">Stop looking there Peachy Click Here 🍑 </a></span> </p>
+<p>Made With ❤ <a href="/Wish-Her/game/">Hey</a> <span><a href="/Wish-Her/game/">Stop looking there Peachy Click Here 🍑 </a></span> </p>
 
     <script src="js/index.js"></script>
 <body oncontextmenu="return false"></body>
