--- a/Wish-Her/message/index.html
+++ b/Wish-Her/message/index.html
@@ -63,7 +63,7 @@
     <div align="right">
     <h2><font color="white">Click Below</font></h2>
 
-    <button class="button" style="vertical-align:middle"><span><a href="../hbd">Next</a></span></button> <!-- CHANGE DOMAIN NAME HERE -->
+    <button class="button" style="vertical-align:middle"><span><a href="/Wish-Her/hbd/">Next</a></span></button> <!-- CHANGE DOMAIN NAME HERE -->
     </div>
 
 </body>
