--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div align="right">
     <h2>Click Below Love </h2>
 
-    <button class="button" style="vertical-align:middle"><span><a href="/Wish-Her/challange">Next</a></span></button> <!-- change domain here -->
+    <button class="button" style="vertical-align:middle"><span><a href="/AnuM3hu.github.io/Wish-Her/challange">Next</a></span></button> <!-- change domain here -->
     </div>
 	<body oncontextmenu="return false"></body>
 </body>
